--- a/project.properties
+++ b/project.properties
@@ -13,6 +13,6 @@
 # Project target.
 target=android-21
 android.library.reference.1=..\\appcompat_v7_2
-android.library.reference.2=..\\google-play-services_lib
-android.library.reference.3=..\\MPChartLib
-android.library.reference.4=../ProgressBarLib
+android.library.reference.2=..\\MPChartLib
+android.library.reference.3=..\\ProgressBarLib
+android.library.reference.4=../google-play-services_lib
