--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -14,13 +14,24 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS" />
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
-  <!--   <uses-permission android:name="android.permission.AUTHENTICATE_ACCOUNTS" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
+    <uses-permission android:name="android.permission.GET_ACCOUNTS" />
+    <uses-permission android:name="android.permission.VIBRATE" />
+    <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
+    <permission
+        android:name="com.mxo2.votingapp.permission.C2D_MESSAGE"
+        android:protectionLevel="signature" />
+
+ 
+    <uses-permission android:name="com.mxo2.votingapp.permission.C2D_MESSAGE" />
+    <!--
+    <uses-permission android:name="android.permission.AUTHENTICATE_ACCOUNTS" />
     <uses-permission android:name="android.permission.READ_OWNER_DATA" />
     <uses-permission android:name="android.permission.MANAGE_ACCOUNTS" />
     <uses-permission android:name="android.permission.USE_CREDENTIALS" />
-    <uses-permission android:name="android.permission.GET_ACCOUNTS" /> -->
+    -->
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />   
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
     <application
         android:name="com.mxo2.votingapp.MainAppClass"
@@ -68,42 +79,64 @@
             android:configChanges="keyboardHidden|orientation"
             android:label="@string/app_name"
             android:screenOrientation="portrait" />
-        
-         <activity
+        <activity
             android:name="com.mxo2.votingapp.ResultActivity"
             android:configChanges="keyboardHidden|orientation"
             android:label="@string/app_name"
             android:screenOrientation="portrait" />
-         <activity
+        <activity
             android:name="com.mxo2.votingapp.ResultElectionConstituencyList"
             android:configChanges="keyboardHidden|orientation"
             android:label="@string/app_name"
             android:screenOrientation="portrait" />
-         <activity
+        <activity
             android:name="com.mxo2.votingapp.ResultConstituency"
             android:configChanges="keyboardHidden|orientation"
             android:label="@string/app_name"
             android:screenOrientation="portrait" />
-         <activity
+        <activity
             android:name="com.mxo2.votingapp.ResultfElectionList"
             android:configChanges="keyboardHidden|orientation"
             android:label="@string/app_name"
             android:screenOrientation="portrait" />
-         <activity
+        <activity
             android:name="com.mxo2.votingapp.AboutUs"
             android:configChanges="keyboardHidden|orientation"
             android:label="@string/app_name"
             android:screenOrientation="portrait" />
-          <activity
+        <activity
             android:name="com.mxo2.votingapp.OpinionPolling"
             android:configChanges="keyboardHidden|orientation"
             android:label="@string/app_name"
             android:screenOrientation="portrait" />
+        <activity
+            android:name="com.mxo2.votingapp.MainActivityGCM"
+            android:configChanges="keyboardHidden|orientation"
+            android:label="@string/app_name"
+            android:screenOrientation="portrait" />
+
+        <service android:name="com.mxo2.votingapp.utils.MyService" >
+        </service>
         
-        <service android:name="com.mxo2.votingapp.utils.MyService"></service>
+        <service android:name="com.mxo2.votingapp.GCMIntentService" />
+
         <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
+        
+        <receiver
+            android:name="com.google.android.gcm.GCMBroadcastReceiver"
+            android:permission="com.google.android.c2dm.permission.SEND" >
+            <intent-filter>
+
+                <!-- Receives the actual messages. -->
+                <action android:name="com.google.android.c2dm.intent.RECEIVE" />
+                <!-- Receives the registration id. -->
+                <action android:name="com.google.android.c2dm.intent.REGISTRATION" />
+
+                <category android:name="com.mxo2.votingapp" />
+            </intent-filter>
+        </receiver>
     </application>
 
 </manifest>
